# singscore

./: README.md  compile.txt  main  main.cpp
singscore_build/: CMakeCache.txt  Makefile  SingScore  cmake_install.cmake
singscore_build/singscore.app/Contents/: Info.plist
src/: CMakeLists.txt  Game.cpp  Game.h  a.out  audioInput.cpp  audioInput.h  audioOutput.cpp  audioOutput.h  main  main.cpp  main.h
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/states/: gameState.cpp  gameState.h  menuState.cpp  menuState.h  playingState.cpp  playingState.h  splashState.cpp  splashState.h
